<resources>
    <string name="app_name">Toit</string>
    <string name="p_todo"><b>Toit!</b></string>
    <string name="p_statistics">할 일 현황</string>
    <string name="p_profile">마이 페이지</string>
    <string name="p_graph">ToIt Statistics</string>
    <string name="sample_guide">오늘도 Toit과 함께 목표 달성!</string>

    <string name="p_app_setting">환경 설정</string>
    <string name="p_app_statistics">상세 통계</string>
    <string name="title_dilay_outline">일일 통계</string>
    <string name="title_weekly">주간 통계</string>
    <string name="title_statistics_all">전체 통계</string>

    <string-array name="arr_board_title">
        <item>목표 작성 하기, Write It!</item>
        <item>목표 수정 하기, Modify It!</item>
        <item>목표 달성 하기, To It!</item>
    </string-array>

    <string-array name="arr_limit_guide">
        <item>목표를 달성할 시간을 설정합니다.</item>
        <item>기한을 설정하지 않은 목표는 달성 시간 통계에 반영 되지 않아요!</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- keys-->
    <string name="key_nickname">NickName</string>
    <string name="key_profile_img">ImgProfile</string>
    <!-- 프로필 편집 메뉴 창 -->
    <string-array name="menu_profile_edit">
        <item>프로필 편집</item>
        <item>닉네임 변경하기</item>
        <item>프로필 사진 변경</item>
        <item>프로필 사진 초기화</item>
        <item>취소</item>
    </string-array>

    <!-- 닉네임 변경 다이얼로그 값 -->
    <string name="txt_h_edit_nickname">닉네임 변경</string>
    <string name="txt_guide_nickname">사용자의 닉네임을 변경합니다.</string>
    <string name="txt_holder_nickname">닉네임을 입력해주세요(16자 이내)</string>
    <string name="txt_edit">변경</string>
    <string name="txt_cancel">취소</string>

    <!-- 토스트 문구 -->
    <string name="ts_invalid_nickname">유효한 닉네임을 입력해주세요.</string>
    <string name="ts_save_nickname">닉네임이 등록되었습니다.</string>
    <string name="ts_greet">Let\'s Toit!</string>
    <string name="ts_edit_nickname">닉네임이 변경되었습니다.</string>

    <string name="ts_picked_img">프로필 사진이 저장되었습니다.</string>
    <string name="ts_error_pick_img">프로필 사진을 불러오던 중 오류가 발생했습니다.</string>
    <string name="header_todo_list">🗒️ 오늘의 할 일</string>
    <string name="txt_guide_graph">지난 1주 간의 목표 달성 현황을 그래프로 확인하실 수 있습니다.</string>
    <string name="txt_daily_circle_graph">목표 달성</string>
    <string name="txt_daily_circle_complete">목표 완료</string>
    <string name="txt_h_app_version">앱 버전</string>
    <string name="txt_oss">오픈 소스 라이선스</string>
    <string name="txt_remove_ads">광고 제거 하기</string>
    <string name="txt_app_restore">앱 설정 백업/복원</string>
    <string name="txt_app_data_clear">앱 데이터 초기화</string>
    <string name="msg_app_data_clear">앱 데이터가 모두 초기화되었습니다.</string>
    <string name="txt_guide_app_data_clear">정말로 모든 앱 데이터를 초기화 하시겠어요?\n초기화 이후에는 데이터를 복구할 수 없습니다.\n*단, 앱 권한 설정은 초기화되지 않습니다.</string>
    <string name="msg_invalid_time">유효하지 않은 시간입니다.</string>
    <string name="msg_input_title">할일 제목을 입력해주세요</string>
    <string name="msg_success_todo">할 일이 등록되었습니다. 😀</string>
    <string name="suffix_complete"> 에 완료 됨</string>
    <string name="suffix_create"> 에 작성 됨</string>
    <string name="msg_modify_ok">수정이 완료되었습니다.</string>
    <string name="txt_today_task">오늘의 할 일</string>
    <string name="txt_today_task_state">달성한 목표</string>
    <string name="txt_day_count1">Toit 과 함께한 지</string>
    <string name="txt_day_count2">일 째!</string>
    <string name="txt_day_count3">하루씩 쌓아가는 나만의 작은 성공 이야기,</string>
    <string name="txt_day_count4">%1$s 님의 성장에 ToIt이 함께 할께요 😀</string>
    <string name="txt_user_name_tail">%1$s 님</string>
    <string name="txt_bar_graph">막대 그래프</string>
    <string name="txt_line_graph">선형 그래프</string>
    <string name="title_daily_todo_graph">일일 목표 달성 추이</string>
    <string name="txt_daily_ratio">일일 목표 달성율</string>
    <string name="txt_yyyy_mm_dd">yyyy-MM-dd 기준</string>
    <string name="title_weekly_ratio">주간 목표 달성율</string>
    <string name="txt_guide_weekly_ratio">지난 1주간의 목표 달성율을 추산한 값입니다.</string>
    <string name="title_average_daily_ratio">일일 평균 목표 달성율</string>
    <string name="txt_guide_average_daily_ratio">지난 1주간의 하루 평균 목표 달성율을 추산한 값입니다.</string>
    <string name="title_toit_heatmap">ToIt! 히트맵</string>
    <string name="txt_guide_heatmap">지난 65일 간의 일일 목표 등록 빈도를 확인하실 수 있습니다.</string>
    <string name="title_statistics_chart">ToIt! 통계 요약</string>
    <string name="txt_hint_search_todo">등록하신 목표 명을 검색해보세요</string>
    <string name="txt_sort_standard">정렬 기준</string>
    <string name="txt_acheive_comment">목표 달성 까지 단 %1$s 개\n조금만 더 힘내 보세요😁</string>
    <string name="txt_guide_daily_todo_graph">현재 시간 까지의 목표 달성 추이를 확인해보세요.</string>
    <string name="txt_task_complete">오늘의 할 일을 모두 마쳤습니다 🤗</string>
    <string name="txt_h_total_todo">전체 목표 수</string>
    <string name="txt_unit">개</string>
    <string name="txt_h_avg_todo">평균 목표</string>
    <string name="txt_h_cumulative_todo">%1$s월 누적 목표 수</string>
    <string name="txt_h_todo_max">최장 기록</string>
    <string name="txt_h_todo_min">최단 기록</string>
    <string name="txt_h_todo_avg">평균 기록</string>
    <string name="txt_statistics_date">%1$s년 %2$s월 Toit 통계</string>
    <string name="txt_h_monthly_report">님의 월간 리포트</string>
    <string name="txt_guide_toit_point">%1$s 님의 앱 사용 이력을 바탕으로 계산한 활동 점수입니다..</string>
    <string name="txt_empty_task">목표 없음</string>
    <string name="txt_desc_total_todo">%1$s 님이 등록 하신 모든 목표의 총합 입니다.</string>
    <string name="txt_desc_avg_todo">%1$s 님이 하루에 등록한 목표의 평균 값입니다.</string>
    <string name="txt_desc_cumulative_todo">%1$s월 기준, 한 달간 누적된 총 목표의 수 입니다.</string>
    <string name="txt_desc_todo_max">%1$s 님이 가장 오래 노력한 시간의 기록입니다.</string>
    <string name="txt_desc_todo_min">%1$s 님이 가장 빠르게 달성한 시간의 기록입니다.</string>
    <string name="txt_desc_todo_avg">%1$s 님이 할 일을 완료하기 위해 필요한 시간의 평균입니다.</string>
    <string name="tab_statistics_summary">통계 요약</string>
    <string name="tab_todo_all">전체 보기</string>
    <string name="txt_no_limit">제한 없음</string>
    <string name="msg_invailid_time_diff">유효한 시간을 선택해 주세요.</string>
    <string name="msg_invalid_limit">남은 시간이 10분 미만이므로 마감 기한을 설정할 수 없습니다..</string>
    <string name="msg_no_limit">마감 기한이 초기화 되었습니다.</string>
    <string name="msg_delete_todo">목표가 삭제되었습니다.</string>
    <string name="title_remove_todo">목표 삭제하기</string>
    <string name="txt_guide_remove_todo">정말로  등록하신 목표를 삭제 하시겠어요?\n[삭제]를 누르시면 회원님의 목표가 삭제됩니다.</string>
    <string name="txt_delete">삭제</string>
    <string name="title_memo">메모</string>
    <string name="title_memo_eng">memo</string>
    <string name="title_remain_time">남은 시간</string>
    <string name="title_reamin_time_eng">remain time</string>
    <string name="txt_complete">완료</string>
    <string name="msg_request_camera_auth">카메라를 열 수 없습니다. [권한]을 허용해주세요.</string>
    <string name="msg_todo_complete">목표 달성! 오늘의 할 일을 달성한 것을 축하합니다😃</string>
    <string name="title_complete_todo">목표 완료 하기</string>
    <string name="txt_guide_complete_todo">정말로 등록하신 목표를 완료 하시겠어요?\n[완료]를 누르시면 회원님의 목표가 완료 처리됩니다.\n완료 후에는 데이터 수정에 제약이 발생해요!\n잊으신 부분은 없는 지 다시 한번 확인해주세요.😁</string>
    <string name="hint_todo">목표를 입력해보세요(최대 28자)</string>
    <string name="hint_todo_memo">메모를 입력해보세요</string>
    <string name="txt_title_todo">TODO</string>
    <string name="txt_title_memo">메모</string>
    <string name="guide_todo_memo">memo</string>
    <string name="txt_set_limit">기한 설정</string>
    <string name="txt_dead_line">마감 기한</string>
    <string name="txt_see_detail_statistics">자세한 통계 보기</string>
    <string name="msg_complete_update">업데이트가 완료되었습니다.</string>
    <string name="msg_update_fail_restart">업데이트에 실패하였습니다. 업데이트를 다시 하시려면 앱을 재시작해주세요.</string>
    <string name="txt_alert_time_lower">마감 기한은 최소 현재 시각보다 10분 이후여야 합니다.</string>
    <string name="txt_no_todo_line1">등록하신 TODO List가 없네요 🤔</string>
    <string name="txt_no_todo_line2">지금 바로 등록해볼까요?</string>
    <string name="def_profile_description">기본 프로필 이미지</string>
    <string name="unit_dp_hour">%02d시</string>
    <string name="unit_dp_hour_prev">~%02d시</string>
    <string name="txt_no_record">기록없음</string>
    <string name="txt_confirm">확인</string>
    <string name="txt_take_photo">사진 촬영</string>
    <string name="guide_take_photo2">단, 목표 완료 후에는 사진 수정이 어려우니,\n완료 전에 사진을 다시 한번 확인해주세요.</string>
    <string name="guide_take_photo1">목표 달성시 다이얼로그 창에서\n촬영한 사진을 확인할 수 있어요!</string>
    <string name="title_take_photo">인증 사진을 남겨볼까요?</string>
    <string name="header_todo">TODO</string>
    <string name="todo_placeholder">목표를 입력해보세요(최대 28자)</string>
    <string name="header_memo">메모</string>
    <string name="desc_memo">memo</string>
    <string name="memo_placeholder">메모를 입력해보세요</string>

    <!-- 통계 값 리스트 -->
    <string-array name="statistics_chart_item_list">
        <item>전체 목표 수</item>
        <item>평균 일일 목표 수</item>
        <item>일일 목표 중앙값</item>
        <item>전체 목표 달성률</item>
        <item>평균 일일 목표 달성률</item>
        <item>일일 목표 달성율 중앙값</item>
        <item>최장 목표 달성 시간</item>
        <item>평균 목표 달성 시간</item>
        <item>목표 달성 시간 중앙값</item>
    </string-array>

    <!-- 정렬 옵션 -->
    <string-array name="option_todo_sort">
        <item>선택 안함</item>
        <item>이름순</item>
        <item>최신순</item>
        <item>과거 순</item>
        <item>목표 상태</item>
    </string-array>
    
</resources>